--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,7 +2,6 @@
 @import '_section2'
 @import '_section3'
 @import '_sectionMap'
-@import './media/_media'
 
 html
   background-color: #1C1D22
@@ -45,7 +44,7 @@ body
     display: flex
     align-items: center
     z-index: 3
-    min-width: 1200px
+    width: 1200px
     min-height: 150px
     justify-content: space-between
     background-color: #1C1D22
@@ -61,7 +60,7 @@ body
       font-family: 'Montserrat'
       font-style: normal
       font-weight: 700
-      font-size: 32px
+      font-size: 28px
       line-height: 38px
       color: #FFFFFF
   &-text
@@ -87,3 +86,4 @@ body
       color: white
 .header-social__number:hover
   color: #FF1A29
+@import '_media'
