--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 1201px)
   .container
-    width: 1000px
+    max-width: 1000px
   .header-social
     width: 1000px
   .section1-title
@@ -8,7 +8,7 @@
 
 @media only screen and (max-width: 1001px)
   .container
-    width: 640px
+    max-width: 640px
   .header-social
     width: 640px
   .header-text__title
@@ -24,7 +24,7 @@
 
 @media only screen and (max-width: 641px)
   .container
-    width: 480px
+    max-width: 480px
   .header-social
     width: 480px
   .header-text__title
@@ -43,7 +43,7 @@
     padding: 26px 16px
 @media only screen and (max-width: 481px)
   .container
-    width: 460px
+    max-width: 460px
 
   .header-social
     width: 460px
@@ -58,11 +58,11 @@
     padding: 26px 10px
 @media only screen and (max-width: 461px)
   .container
-    width: 360px
+    max-width: 360px
   .header-social
     width: 360px
   .header-text__title
-    font-size: 25px
+    font-size: 24px
   .header-social__number
     font-size: 16px
   .header-social__media-link img
