--- a/sass/_section2.sass
+++ b/sass/_section2.sass
@@ -1,8 +1,18 @@
 .section2
   margin-top: 100px
-.slide img
+.x
+  width: 270px
   height: 400px
+  background-size: cover
+  background-repeat: no-repeat
+.y
+
+  width: 600px
+  height: 400px
+  background-size: cover
+  background-repeat: no-repeat
 .slide
+
   padding-right: 50px
 .slider_title
   text-align: center
