--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -81,11 +81,13 @@
   .header-social
     width: 320px
     background: transparent
+  .header-social
+    bottom: 40px
   .header-text__title
     padding-top: 10px
     font-weight: 700
-    font-size: 20px
-    line-height: 24px
+    font-size: 31px
+    line-height: 40px
   .header-social__number
     font-weight: 700
     font-size: 20px
@@ -97,8 +99,8 @@
     padding-left: 10px
   .section1-title
     padding-top: 40px
-    font-weight: 500
-    font-size: 16px
+    font-weight: 600
+    font-size: 15px
     line-height: 19px
   .section1-openHours
     font-weight: 500
@@ -120,3 +122,18 @@
     font-size: 16px
   .sectionMap_text
     padding-right: 0
+  .header-text
+    bottom: 40vh
+  .logo-mobile
+    display: block
+    position: absolute
+    z-index: 10
+    margin-top: 180px
+  .logo-mobile img
+    width: 320px
+    height: 320px
+
+  .header-text
+    display: none
+  .logo
+    display: none
